--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express": "^4.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
